--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -11,14 +11,33 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     
-    <title>Document</title>
+    <title>
+    {% block title %}
+    {% endblock %}
+    </title>
+    
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+            <a href="#" class="navbar-brand">REGEX</a>
+            </div>
+            
+            <div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="home.html">Главная</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Обратная связь</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="jumbotron">
     <div class="container">
       
-      {% block content %}
-      {% endblock %}
+    {% block content %}
+    {% endblock %}
       
     </div>
   </div>
