--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -15,16 +15,20 @@
 </head>
 <body>
     <div class="jumbotron">
-    <div class="container">
+    <div class="container-fluid">
       
       {% block content %}
       {% endblock %}
       
     </div>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <hr>
     &copy; Все права защищены 2018
+    <div class="raw">
+          <div class="col-md-4">A</div>
+          <div class="col-md-4" style="background: red">B</div>
+      </div>
   </div>
 </body>
 </html>
