--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -18,19 +18,23 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            <a href="#" class="navbar-brand">REGEX</a>
-            </div>
-            
-            <div>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="home.html">Главная</a></li>
-                    <li><a href="#">О нас</a></li>
-                    <li><a href="#">Обратная связь</a></li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <div class="navbar-header">
+        <a href="#" class="navbar-brand">REGEX</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="home.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">О нас</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
+            </ul>
+            {% if status %}
+            {% block account-loginOK %}
+            {% endblock %}
+            {% else %}
+            {% block account-loginNO %}
+            {% endblock %}
+            {% endif %}
         </div>
     </nav>
     <div class="jumbotron">
@@ -44,10 +48,6 @@
   <div class="container-fluid">
     <hr>
     &copy; Все права защищены 2018
-    <div class="raw">
-          <div class="col-md-4">A</div>
-          <div class="col-md-4" style="background: red">B</div>
-      </div>
   </div>
 </body>
 </html>
