--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -2,15 +2,15 @@
 
 {% block account-loginOK %}
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item active px-1"><a class="btn btn-primary" href="#" role="button">Register</a></li>
-    <li class="nav-item px-1"><a class="btn btn-success" href="#" role="button">Login</a></li>
+    <li class="nav-item active my-2 px-1"><a class="btn btn-primary" href="#" role="button">Register</a></li>
+    <li class="nav-item my-2 px-1"><a class="btn btn-success" href="#" role="button">Login</a></li>
 </ul>
 {% endblock %}
 
 {% block account-loginNO %}
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item active px-1"><a class="btn btn-primary" href="#" role="button">Register</a></li>
-    <li class="nav-item px-1"><a class="btn btn-success" href="#" role="button">Login</a></li>
+    <li class="nav-item active my-2 px-1"><a class="btn btn-primary" href="#" role="button">Register</a></li>
+    <li class="nav-item my-2 px-1"><a class="btn btn-success" href="#" role="button">Login</a></li>
 </ul>
 {% endblock %}
 
