--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
+    <!--    jQuerty-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     
     <title>
     {% block title %}
@@ -18,15 +18,19 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-        <div class="navbar-header">
-        <a href="#" class="navbar-brand">REGEX</a>
-        </div>
-        <div class="collapse navbar-collapse">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+       <div class="container">
+        
+        <a href="#" class="navbar-brand" >REGEX</a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse-1" >
+            <span class="sr-only">Navigation</span>
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="home.html">Главная</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">О нас</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
             </ul>
             {% if status %}
             {% block account-loginOK %}
@@ -35,6 +39,7 @@
             {% block account-loginNO %}
             {% endblock %}
             {% endif %}
+        </div>
         </div>
     </nav>
     <div class="jumbotron">
@@ -49,5 +54,12 @@
     <hr>
     &copy; Все права защищены 2018
   </div>
+  
+  
+  
+    
+    
+    <!--    Latest compiled and minified JavaScript-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 </body>
 </html>
