--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -47,10 +47,13 @@
       
     {% block content %}
     {% endblock %}
+     
+     {% block modal %}
+     {% endblock %}
       
     </div>
   </div>
-  <div class="container-fluid">
+  <div class="container">
     <hr>
     &copy; Все права защищены 2018
   </div>
@@ -61,5 +64,8 @@
     
     <!--    Latest compiled and minified JavaScript-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    
+    
+            
 </body>
 </html>
