--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -16,9 +16,12 @@
     {% endblock %}
     </title>
     
+    <style>
+        body {padding-top: 90px}
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
        <div class="container">
         
         <a href="#" class="navbar-brand" >REGEX</a>
@@ -42,6 +45,7 @@
         </div>
         </div>
     </nav>
+    <main role="main" class="container">
     <div class="jumbotron">
     <div class="container-fluid">
       
@@ -53,6 +57,7 @@
       
     </div>
   </div>
+  </main>
   <div class="container">
     <hr>
     &copy; Все права защищены 2018
