--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -32,8 +32,10 @@
         
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="home.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">О нас</a></li>
+                <li class="nav-item active px-1"><a class="nav-link" href="home.html">Главная</a></li>
+                <li class="nav-item px-1"><a class="nav-link" href="#">Теория</a></li>
+                <li class="nav-item px-1"><a class="nav-link" href="/practice/">Практика</a></li>
+                <li class="nav-item px-1"><a class="nav-link" href="#">О нас</a></li>
             </ul>
             {% if status %}
             {% block account-loginOK %}
