--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -1,9 +1,5 @@
 {% extends "mainApp/wrapper.html" %}
 
-{% block account-loginOK %}
-
-{% endblock %}
-
 {% block account-loginNO %}
 <ul class="navbar-nav ml-auto">
     <li class="nav-item active my-2 px-1"><a class="btn btn-primary" data-toggle="modal" href="#popupLogin" role="button" id="regClick">Регистрация</a></li>
@@ -12,27 +8,31 @@
 {% endblock %}
 
 {% block content %}
-<div class="jumbotron">
 <div class="container-fluid">
-<div class="continer">
-    <main role="main">
-        <div class="jumborton">
-            <div class="col-sm-8 mx-auto">
-                <h1>Let's start!</h1>
-                <p>Description</p>
-                <p><a class="btn btn-primary" href="#" role="button">Начать</a></p>
-            </div>
-        </div>
-    </main>
-</div>
+<div class="row">
+    <div class="col-sm-3 sidebar">
+        <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
+            <li class="list-group-item"><a href="{% url 'less1' %}">Первый урок</a></li>
+            <li class="list-group-item"><a href="#">Второй урок</a></li>
+            <li class="list-group-item"><a href="#">Третий урок</a></li>
+            <li class="list-group-item"><a href="#">Четвертый урок</a></li>
+        </ul>
+    </div>
+    <div class="col-sm-9">
+    {% block doc %}
+    {% endblock %}
+    </div>
 </div>
 </div>
 {% endblock %}
 
 {% block scripts %}
-
 <script>
-$('#logClick').click(function(e) {
+	$( '.navbar-nav' ).find( 'li.active' ).removeClass( 'active' );
+	$( '#theory_tab' ).addClass( 'active' );
+    
+    
+    $('#logClick').click(function(e) {
         e.preventDefault();
         $( '#reg-nav-item' ).removeClass( 'active' );
         $( '#log-nav-item' ).addClass( 'active' );
@@ -44,5 +44,4 @@ $('#logClick').click(function(e) {
         $( '#log-nav-item' ).removeClass( 'active' );
     });
 </script>
-
 {% endblock %}
