--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -8,7 +8,20 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="container-fluid">
+<div class="row">
+    <div class="col-sm-3 sidebar">
+        <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
+            <li class="list-group-item"><a href="{% url 'task1' %}">Первое задание</a></li>
+            <li class="list-group-item"><a href="#">Второе задание</a></li>
+        </ul>
+    </div>
+    <div class="col-sm-9">
+    {% block task %}
+    {% endblock %}
+    </div>
+</div>
+</div>
 {% endblock %}
 
 {% block scripts %}
