--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -6,7 +6,7 @@
 
 {% block account-loginNO %}
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item active my-2 px-1"><a class="btn btn-primary" data-toggle="modal" href="#popupLogin" role="button" id="regClick">Регистрация</a></li>
+    <li class="nav-item my-2 px-1"><a class="btn btn-primary" data-toggle="modal" href="#popupLogin" role="button" id="regClick">Регистрация</a></li>
     <li class="nav-item my-2 px-1"><a class="btn btn-success" data-toggle="modal" href="#popupLogin" role="button" id="logClick">Вход</a></li>
 </ul>
 {% endblock %}
@@ -36,13 +36,13 @@ $('#logClick').click(function(e) {
         e.preventDefault();
         $( '#reg-nav-item' ).removeClass( 'active' );
         $( '#log-nav-item' ).addClass( 'active' );
-    });
+});
     
-    $('#regClick').click(function(e) {
+$('#regClick').click(function(e) {
         e.preventDefault();
         $( '#reg-nav-item' ).addClass( 'active' );
         $( '#log-nav-item' ).removeClass( 'active' );
-    });
+});
 </script>
 
 {% endblock %}
