--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -12,8 +12,10 @@
 <div class="row">
     <div class="col-sm-3 sidebar">
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
-            <li class="list-group-item"><a href="{% url 'task1' %}">Первое задание</a></li>
-            <li class="list-group-item"><a href="#">Второе задание</a></li>
+            <li class="list-group-item"><a href="{% url 'task1' %}">Задание 1</a></li>
+            <li class="list-group-item"><a href="{% url 'task2' %}">Задание 2</a></li>
+            <li class="list-group-item"><a href="{% url 'task3' %}">Задание 3</a></li>
+            <li class="list-group-item"><a href="{% url 'task4' %}">Задание 4</a></li>
         </ul>
     </div>
     <div class="col-sm-9">
