--- a/practice/templates/practice/tasks/task_2.html
+++ b/practice/templates/practice/tasks/task_2.html
@@ -25,9 +25,10 @@
 
 <div class="jumbotron">
     <div class="container">
-    <h5>Дан конечный автомат-распознаватель:</h5>
-    <br><div id="graphviz_svg"><!-- Target for dynamic svg generation --></div><hr>
-    <p>Допускает ли автомат данную цепочку?</p>
+    <h5>Дано регулярное выражение:</h5>
+    <br>
+    <div id="graphviz_svg"><!-- Target for dynamic svg generation --></div><hr>
+    <p>Принадлежит ли слово данному регулярному выражению?</p>
     <p id="statement">loading...</p><br>
     <p id="result"></p>
     <div class="row" id="answer_request">
@@ -39,11 +40,9 @@
     </div>
   </div>
 </div>
-</div>
+</div
 
 {% load staticfiles%}
-<script src="{% static 'js/viz.js/viz.js' %}"></script>
-<script src="{% static 'js/viz.js/full.render.js' %}"></script>
-<script src="{% static 'js/practice/practice_task_1.js' %}"></script>
+<script src="{% static 'js/practice/practice_task_2.js' %}"></script>
 
 {% endblock %}
