--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -12,10 +12,10 @@
 <div class="row">
     <div class="col-sm-3 sidebar">
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
-            <li class="list-group-item"><a href="{% url 'less1' %}">Первый урок</a></li>
-            <li class="list-group-item"><a href="#">Второй урок</a></li>
-            <li class="list-group-item"><a href="#">Третий урок</a></li>
-            <li class="list-group-item"><a href="#">Четвертый урок</a></li>
+            <li class="list-group-item"><a href="{% url 'less1' %}">Урок 1</a></li>
+            <li class="list-group-item"><a href="{% url 'less2' %}">Урок 2</a></li>
+            <li class="list-group-item"><a href="#">Урок 3</a></li>
+            <li class="list-group-item"><a href="#">Урок 4</a></li>
         </ul>
     </div>
     <div class="col-sm-9">
