--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -18,9 +18,22 @@
     <main role="main">
         <div class="jumborton">
             <div class="col-sm-8 mx-auto">
-                <h1>Let's start!</h1>
-                <p>Description</p>
-                <p><a class="btn btn-primary" href="#" role="button">Начать</a></p>
+                <h1>Регулярные выражения</h1>
+                <br>
+                <h3>Введение</h3>
+                <br>
+                <p>Механизм регулярных выражений нашел применение во многих программных продуктах, входит
+                    в стандартную библиотеку или даже является частью языка программирования. При помощи
+                    регулярных выражений можно достаточно просто описать любой регулярный язык, а для
+                    регулярных языков существуют простые алгоритмы проверки принадлежности цепочки заданному
+                    языку.</p>
+                <p>Обзор задания: реализовать программу, которая принимает в качестве параметра регулярное
+                    выражение, читает строчки (цепочки символов) со стандартного ввода, а на стандартный вывод
+                    выдает только те строчки, которые удовлетворяют заданному регулярному выражению. У
+                    программы должен быть специальный режим работы, в котором она печатает на стандартный
+                    вывод описание сгенерированного для разбора цепочки автомата</p>
+                <br>
+                <p><a class="btn btn-primary btn-lg" href="{% url 'theory' %}" role="button" style="padding: .5rem 2rem !important;">Начать</a></p>
             </div>
         </div>
     </main>
