--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -33,7 +33,7 @@
                     программы должен быть специальный режим работы, в котором она печатает на стандартный
                     вывод описание сгенерированного для разбора цепочки автомата</p>
                 <br>
-                <p><a class="btn btn-primary btn-lg" href="{% url 'theory' %}" role="button" style="padding: .5rem 2rem !important;">Начать</a></p>
+                <p><a class="btn btn-primary btn-lg" href="{% url 'theory_intro' %}" role="button" style="padding: .5rem 2rem !important;">Начать</a></p>
             </div>
         </div>
     </main>
