--- a/theory/templates/theory/lessons/lesson_1.html
+++ b/theory/templates/theory/lessons/lesson_1.html
@@ -3,9 +3,9 @@
 {% block doc %}
 <div class="jumbotron">
     <div class="container">
-    <h1>Hello!</h1>
-    <p>Мы собираем делать то то.</p>
-    <p><a href="#" class="btn btn-primary btn-large">Попрактиковаться!</a></p>
+    <h1>Введение</h1>
+    <p>Для начала введем необходимые базовые термины.</p>
+    <p><a href="#" class="btn btn-primary btn-large">Перейти к практике</a></p>
 </div>
 </div>
 <h2>Заголовок</h2>
