--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -12,10 +12,12 @@
 <div class="row">
     <div class="col-sm-3 sidebar">
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
-            <li class="list-group-item"><a href="{% url 'less1' %}">Урок 1</a></li>
-            <li class="list-group-item"><a href="{% url 'less2' %}">Урок 2</a></li>
-            <li class="list-group-item"><a href="#">Урок 3</a></li>
-            <li class="list-group-item"><a href="#">Урок 4</a></li>
+            <li class="list-group-item"><a href="{% url 'theory_intro' %}">Введение</a></li>
+            <li class="list-group-item"><a href="{% url 'less1' %}">Регулярные множества и выражения</a></li>
+            <li class="list-group-item"><a href="{% url 'less2' %}">Конечные автоматы</a></li>
+            <li class="list-group-item"><a href="#">Построение НКА</a></li>
+            <li class="list-group-item"><a href="#">Построение ДКА по НКА</a></li>
+            <li class="list-group-item"><a href="#">Построение ДКА по регулярному выражению</a></li>
         </ul>
     </div>
     <div class="col-sm-9">
