--- a/theory/templates/theory/lessons/lesson_1.html
+++ b/theory/templates/theory/lessons/lesson_1.html
@@ -10,6 +10,25 @@
 </div>
 <h2>Заголовок</h2>
 <p>Описание</p>
+
+<ul>
+    <li>Конечное множество объектов называется <strong>словарем</strong>.</li>
+    
+    <li>Элементы словаря называются <strong>символами</strong>.</li>
+    
+    <li><strong>Цепочкой (символов)</strong> над словарем будем называть произвольную конечную
+    последовательность символов словаря. Символы будем далее обозначать латинскими
+    буквами начала словаря, цепочки – малыми греческими буквами.
+    
+    
+    <ul>
+    <li>Пример. Пусть Σ – словарь, содержащий три символа, <em>a,b,c</em>. Над словарем Σ
+    можно построить различные цепочки, например, α=<em>abbca</em>, β=<em>cca</em>, γ=<em>b</em>.</li></ul>
+    </li>
+    
+    <li>пустая цепочка, для ее обозначения введен специальный символ <em>ε</em>.</li>
+</ul>
+
 <div class="table-responsive">
 
     <table class="table table-bordered">
