--- a/mainApp/static/css/style.css
+++ b/mainApp/static/css/style.css
@@ -2,13 +2,22 @@
 	margin-bottom: 40px;
 }
 
+.img-theory {
+	margin: 20px 0;
+	width: 350px;
+}
+
 html {
 	overflow: -moz-scrollbars-vertical;
 	overflow: scroll;
 }
 
 body {
-	padding-top: 90px
+	padding-top: 90px;
+	font-family: sans-serif;
+	font-size: 16px;
+	line-height: 1.5;
+	padding-bottom: 90px;
 }
 
 footer {
