--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -18,6 +18,7 @@
             <li class="list-group-item"><a href="{% url 'regex_to_NFA' %}">Построение ДКА по регулярному выражению</a></li>
             <li class="list-group-item"><a href="#">Построение НКА</a></li>
             <li class="list-group-item"><a href="#">Построение ДКА по НКА</a></li>
+            <li class="list-group-item"><a href="{% url 'DFA_to_regex' %}">Преобразование ДКА в регулярное выражение</a></li>
         </ul>
     </div>
     <div class="col-sm-9">
