task_DFA_to_regex input

--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -15,7 +15,7 @@
             <li class="list-group-item"><a href="{% url 'task1' %}">Задание 1</a></li>
             <li class="list-group-item"><a href="{% url 'task2' %}">Задание 2</a></li>
             <li class="list-group-item"><a href="{% url 'task3' %}">Задание 3</a></li>
-            <li class="list-group-item"><a href="{% url 'task4' %}">Задание 4</a></li>
+            <li class="list-group-item"><a href="{% url 'task_DFA_to_regex' %}">ДКА в регулярное выражение</a></li>
         </ul>
     </div>
     <div class="col-sm-9">
