DFA_to_regex theory

--- a/theory/templates/theory/lessons/DFA_to_regex.html
+++ b/theory/templates/theory/lessons/DFA_to_regex.html
@@ -19,7 +19,7 @@
 
 <p><h5 class="mb-2">Шаг 1.</h5>Если существует какое-либо входящее ребро в начальное состояние, то создаем новое начальное состояние, не имеющее входящего ребра.</p>
 
-<img id="graph_0" src="{% static 'media/DFA_to_regex/graph_0.png' %}" alt="graph_0">
+<img  id="graph_0" src="{% static 'media/DFA_to_regex/graph_0.png' %}" alt="graph_0">
 
 <p><h5 class="mb-2">Шаг 2.</h5><i>Важно!</i> В КНА должно быть только одно конечное состояние.<br> Если в ДКА существует несколько конечных состояний, преобразуем все конечные состояния в неконечные и создаем новое единственное конечное состояние.</p>
 
@@ -36,6 +36,56 @@
 
 <hr>
 <h5>Рассмотрим описанный выше метод на примере:</h5>
+
+<p>Find regular expression for the following DFA:</p>
+
+<img class="img-theory" src="{% static 'media/DFA_to_regex/problem_0.png' %}" alt="problem_0">
+
+<h5>Решение:</h5>
+
+<p><h6 class="mb-2">Шаг 1.</h6><ul><li>Существует несколько конечных состояний.</li><li>Итак, мы конвертируем их в одно конечное состояние.</li></ul></p>
+<p>Полученный DFA:</p>
+<img class="img-theory" src="{% static 'media/DFA_to_regex/problem_1.png' %}" alt="problem_1">
+
+<h6>Шаг 2.</h6>
+<p>Теперь мы начинаем устранять промежуточные состояния.</p>
+<p>Во-первых, давайте удалим состояние q4.
+  <ul>
+    <li>Существует путь, идущий из состояния q2 в состояние qf через состояние q4.</li>
+    <li>Итак, после устранения состояния q4 мы помещаем прямой путь из состояния q2 в состояние qf со стоимостью b.∈ = b.</li>
+  </ul>
+</p>
+<img class="img-theory" src="{% static 'media/DFA_to_regex/problem_2.png' %}" alt="problem_2">
+
+<h6>Шаг 3.</h6>
+<p>Теперь давайте удалим состояние q3.
+  <ul>
+    <li>Существует путь, идущий из состояния q2 в состояние qf через состояние q3.</li>
+    <li>Итак, после устранения состояния q3 мы помещаем прямой путь из состояния q2 в состояние qf со стоимостью c.∈ = c.</li>
+  </ul>
+</p>
+<img class="img-theory" src="{% static 'media/DFA_to_regex/problem_3.png' %}" alt="problem_3">
+
+<h6>Шаг 4.</h6>
+<p>Теперь давайте удалим состояние q5.
+  <ul>
+    <li>Существует путь, идущий из состояния q2 в состояние qf через состояние q5.</li>
+    <li>Итак, после устранения состояния q5 мы помещаем прямой путь из состояния q2 в состояние qf со стоимостью d.∈ = d.</li>
+  </ul>
+</p>
+<img class="img-theory" src="{% static 'media/DFA_to_regex/problem_4.png' %}" alt="problem_4">
+
+<h6>Шаг 5.</h6>
+<p>Теперь давайте удалим состояние q2.
+  <ul>
+    <li>Существует путь, идущий из состояния q1 в состояние qf через состояние q2.</li>
+    <li>Итак, после устранения состояния q2 мы помещаем прямой путь из состояния q1 в состояние qf, имеющее стоимость a. (B + c + d).</li>
+  </ul>
+</p>
+<img class="img-theory" src="{% static 'media/DFA_to_regex/problem_5.png' %}" alt="problem_5">
+<hr>
+<p class="mt-3">Отсюда,</p>
+<h5>Регулярное выражение: a (b + c + d)</h5>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
