--- a/practice/templates/practice/tasks/subtemplates/input.html
+++ b/practice/templates/practice/tasks/subtemplates/input.html
@@ -5,6 +5,7 @@
             <label for="inputRegex">Какое регулярное выражение ему соответствует?</label>
             <input class="form-control noresize" rows="1" placeholder="Введите здесь" type="text" id="inputRegex" name="q" required>
         </div>
+        <input type="hidden" name="answer" id="answer">
         <button type="submit" class="btn btn-primary" id="btn_accept">Подтвердить</button>
     </form>
 </div>
