--- a/mainApp/static/css/style.css
+++ b/mainApp/static/css/style.css
@@ -4,7 +4,7 @@
 
 .img-theory {
 	margin: 25px 0;
-	width: 350px;
+	/* width: 350px; */
 }
 
 html {
@@ -52,4 +52,7 @@ p {
 
 .noresize {
 	resize: none; 
+}
+
+.step .mb-1{
 }
