--- a/theory/templates/theory/lessons/DFA_to_regex.html
+++ b/theory/templates/theory/lessons/DFA_to_regex.html
@@ -5,87 +5,93 @@
 <div class="jumbotron">
     <div class="container">
     <h3 class="mb-3">Преобразование ДКА в регулярное выражение</h3>
-    <p>Существуют два популярных метода для преоброзования ДНА в соответствующее им регулярное выражение: Arden’s Method и метод исключения состояний (State Elimination Method).</p>
+    <p>Существуют два популярных метода для преоброзования ДНА в соответствующее им регулярное выражение: метод Ардена (<i>Arden’s Method</i>) и метод исключения состояний (<i>State Elimination Method</i>).</p>
     <p>Мы рассмотрим с вами последний из них.</p>
     </div>
 </div>
-<h5 class="mb-3">Преобразование детерминированного конечного автомата в регулярное выражение.</h5>
+<h5 class="mb-3">Преобразование детерминированного конечного автомата в регулярное выражение методом исключения состояний.</h5>
 <p><i>Алгоритм:</i></p>
-<p><i>Вход.</i> The two popular methods for converting a DFA to its regular expression are.</p>
+<p><i>Вход.</i> КА </p>
 
-<p><i>Выход.</i> НКА <span class="math inline">\(N\)</span>, такой что <span class="math inline">\(L(N) = L(r)\)</span>.</p>
+<p><i>Выход.</i> НКА <span class="math inline">\(N\): \(L(N) = L(r)\)</span></p>
 
-<p><i>Метод</i> включает следующие шаги:</p>
+<p><i>Метод.</i> Включает следующие шаги:</p>
 
-<p><h5 class="mb-2">Шаг 1.</h5>Если существует какое-либо входящее ребро в начальное состояние, то создаем новое начальное состояние, не имеющее входящего ребра.</p>
+<p><h6>Шаг 1.</h6>Если существует какое-либо входящее ребро в начальное состояние, то создаем новое начальное состояние, не имеющее входящего ребра.</p>
 
-<img  id="graph_0" src="{% static 'media/DFA_to_regex/graph_0.png' %}" alt="graph_0">
+<img class="img-theory" id="graph_0" src="{% static 'media/DFA_to_regex/graph_0.png' %}" alt="graph_0">
 
-<p><h5 class="mb-2">Шаг 2.</h5><i>Важно!</i> В КНА должно быть только одно конечное состояние.<br> Если в ДКА существует несколько конечных состояний, преобразуем все конечные состояния в неконечные и создаем новое единственное конечное состояние.</p>
-
-<img id="graph_1" src="{% static 'media/DFA_to_regex/graph_1.png' %}" alt="graph_1">
+<p><h5 class="step">Шаг 2.</h5><i>Важно!</i> В КНА должно быть только одно конечное состояние.<br> Если в ДКА существует несколько конечных состояний, преобразуем все конечные состояния в неконечные и создаем новое единственное конечное состояние.</p>
+<img class="img-theory" id="graph_1" src="{% static 'media/DFA_to_regex/graph_1.png' %}" alt="graph_1">
 
 <p><h5 class="mb-2">Шаг 3.</h5><i>Важно!</i> Конечное состояние КНА не должно иметь какого-либо исходящего преимущества.<br>Если существует какое-либо исходящее ребро из конечного состояния, то создаем новое конечное состояние, не имеющее выходного ребра из него.</p>
-<img id="graph_2" src="{% static 'media/DFA_to_regex/graph_2.png' %}" alt="graph_2">
+<img class="img-theory" id="graph_2" src="{% static 'media/DFA_to_regex/graph_2.png' %}" alt="graph_2">
 
-<p><h5 class="mb-2">Шаг 4.</h5><ul><li>Устраняем все промежуточные состояния по одному.</li><li>Эти состояния могут быть устранены в любом порядке.</li></ul></p>
+<p><h5 class="mb-2">Шаг 4.</h5>Устраняем все промежуточные состояния по одному.<br>Эти состояния могут быть устранены в любом порядке.</p>
 
-<p><h5 class="mb-2">В результате,</h5><ul><li>Только начальное состояние, переходящее в конечное состояние, останется.</li><li>Стоимость этого перехода является обязательным регулярным выражением.</li></ul></p>
+<p><h5 class="mb-2 mt-5">В результате,</h5><ul><li>Только начальное состояние, переходящее в конечное состояние, останется.</li><li>Стоимость этого перехода является обязательным регулярным выражением.</li></ul></p>
 
 <p><i>На заметку.</i> Метод исключения состояний может быть применен к любым конечным автоматам.</p>
 
 <hr>
-<h5>Рассмотрим описанный выше метод на примере:</h5>
+<h5 class="mt-5 mb-3">Рассмотрим описанный выше метод на примере:</h5>
 
-<p>Find regular expression for the following DFA:</p>
+<p>Найдем регулярное выражение для следующего DFA:</p>
 
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_0.png' %}" alt="problem_0">
 
-<h5>Решение:</h5>
+<h5 class="mt-3">Решение:</h5>
 
-<p><h6 class="mb-2">Шаг 1.</h6><ul><li>Существует несколько конечных состояний.</li><li>Итак, мы конвертируем их в одно конечное состояние.</li></ul></p>
+<p><h6 class="mb-2">Шаг 1.</h6>
+  <ul>
+    <li>Видим, что существует несколько конечных состояний.</li>
+    <li>Значит, мы конвертируем их в одно конечное состояние.</li>
+  </ul>
+</p>
 <p>Полученный DFA:</p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_1.png' %}" alt="problem_1">
 
 <h6>Шаг 2.</h6>
 <p>Теперь мы начинаем устранять промежуточные состояния.</p>
-<p>Во-первых, давайте удалим состояние q4.
+<p>Во-первых, давайте удалим состояние <span class="math inline">\(q_{4}\)</span>.
   <ul>
-    <li>Существует путь, идущий из состояния q2 в состояние qf через состояние q4.</li>
-    <li>Итак, после устранения состояния q4 мы помещаем прямой путь из состояния q2 в состояние qf со стоимостью b.∈ = b.</li>
+    <li>Смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{4}\)</span>.</li>
+    <li>После устранения состояния <span class="math inline">\(q_{4}\)</span> помещаем прямой путь из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span class="math inline">\(b.e = b\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_2.png' %}" alt="problem_2">
 
 <h6>Шаг 3.</h6>
-<p>Теперь давайте удалим состояние q3.
+<p>Теперь давайте удалим состояние <span class="math inline">\(q_{3}\)</span>.
   <ul>
-    <li>Существует путь, идущий из состояния q2 в состояние qf через состояние q3.</li>
-    <li>Итак, после устранения состояния q3 мы помещаем прямой путь из состояния q2 в состояние qf со стоимостью c.∈ = c.</li>
+    <li>Опять смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{3}\)</span>.</li>
+    <li>После устранения состояния <span class="math inline">\(q_{3}\)</span> мы помещаем прямой путь из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span class="math inline">\(c.e = c\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_3.png' %}" alt="problem_3">
 
 <h6>Шаг 4.</h6>
-<p>Теперь давайте удалим состояние q5.
+<p>Теперь давайте удалим состояние <span class="math inline">\(q_{5}\)</span>.
   <ul>
-    <li>Существует путь, идущий из состояния q2 в состояние qf через состояние q5.</li>
-    <li>Итак, после устранения состояния q5 мы помещаем прямой путь из состояния q2 в состояние qf со стоимостью d.∈ = d.</li>
+    <li>Существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{5}\)</span>.</li>
+    <li>После устранения состояния <span class="math inline">\(q_{5}\)</span> мы помещаем прямой путь из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span class="math inline">\(d.e = d\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_4.png' %}" alt="problem_4">
 
 <h6>Шаг 5.</h6>
-<p>Теперь давайте удалим состояние q2.
+<p>Теперь давайте удалим состояние <span class="math inline">\(q_{2}\)</span>.
   <ul>
     <li>Существует путь, идущий из состояния q1 в состояние qf через состояние q2.</li>
-    <li>Итак, после устранения состояния q2 мы помещаем прямой путь из состояния q1 в состояние qf, имеющее стоимость a. (B + c + d).</li>
+    <li>После устранения состояния <span class="math inline">\(q_{2}\)</span> мы помещаем прямой путь из состояния <span class="math inline">\(q_{1}\)</span> в состояние <span class="math inline">\(q_{f}\)</span>, имеющее стоимость <span class="math inline">\(a.(b+c+d)\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_5.png' %}" alt="problem_5">
-<hr>
-<p class="mt-3">Отсюда,</p>
-<h5>Регулярное выражение: a (b + c + d)</h5>
+
+<h5 class="mt-5">Получили регулярное выражение: <span class="math inline">\(a(b+c+d)\)</span></h5>
+
+<p class="mt-4"><i>*Перевод статьи (англ.): "DFA to Regular Expression" (Akshay Singhal)</i></p>
+<!-- https://www.gatevidyalay.com/dfa-to-regular-expression-examples-automata/ -->
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
