--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -14,7 +14,7 @@
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
             <li class="list-group-item"><a href="{% url 'theory_intro' %}">Введение</a></li>
             <li class="list-group-item"><a href="{% url 'less1' %}">Регулярные множества и выражения</a></li>
-            <li class="list-group-item"><a href="{% url 'less2' %}">Конечные автоматы</a></li>
+            <li class="list-group-item"><a href="{% url 'FA' %}">Конечные автоматы</a></li>
             <li class="list-group-item"><a href="{% url 'regex_to_NFA' %}">Построение ДКА по регулярному выражению</a></li>
             <li class="list-group-item"><a href="#">Построение НКА</a></li>
             <li class="list-group-item"><a href="#">Построение ДКА по НКА</a></li>
