add intro & basic

--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -12,8 +12,8 @@
 <div class="row">
     <div class="col-sm-3 sidebar">
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
-            <li class="list-group-item"><a href="{% url 'theory_intro' %}">Введение</a></li>
-            <li class="list-group-item"><a href="{% url 'less1' %}">Регулярные множества и выражения</a></li>
+            <li class="list-group-item"><a href="{% url 'intro' %}">Введение</a></li>
+            <li class="list-group-item"><a href="{% url 'basic_definitions' %}">Регулярные множества и выражения</a></li>
             <li class="list-group-item"><a href="{% url 'FA' %}">Конечные автоматы</a></li>
             <li class="list-group-item"><a href="{% url 'regex_to_NFA' %}">Построение ДКА по регулярному выражению</a></li>
             <li class="list-group-item"><a href="#">Построение НКА</a></li>
