--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active px-1" id="main_tab"><a class="nav-link" href="{% url 'index' %}">Главная</a></li>
-                <li class="nav-item px-1" id="theory_tab"><a class="nav-link" href="{% url 'theory_intro' %}">Теория</a></li>
+                <li class="nav-item px-1" id="theory_tab"><a class="nav-link" href="{% url 'intro' %}">Теория</a></li>
                 <li class="nav-item px-1" id="practice_tab"><a class="nav-link" href="/practice">Практика</a></li>
             </ul>
             {% if status %}
